--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@svgr/webpack": "^8.1.0",
     "@types/react-dom": "^18.3.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^4.0.0",
     "typescript": "^4.3.5",
