--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "jest"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.6",
@@ -25,14 +26,20 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.4.7",
+    "@testing-library/react": "^16.0.0",
     "@types/react-dom": "^18.3.0",
+    "@types/testing-library__react": "^10.2.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
